vdi/fill.c: fixed fills to use fill color, not line color (MAD)

2004-10-08
vdi/vdi_mouse.c: implemented vex_wheelv() (MAD)

2004-10-09
bios/ikbd.c: keyboard repetition respects 1st bit of conterm (joy)
             conterm initialized (we never did that before) (joy)
doc/bios.txt: fixed description of conterm bits (joy)

2004-10-18
bios/conout.S: removed from CVS (MAD)
bios/conout.c: hardware dependent optimized console stuff (MAD)
bios/vt52.c:   hardware independent rest of vt52 console (MAD)

2004-10-19
bios/conout.c: some integer overflow bugs fixed (MAD)

2004-11-24
- Makefile: Replaced "-oformat" by "--oformat" (THH)

2004-11-29
- doc/coding.txt vdi/*.S: replaced all MOVEM.W by MOVEM.L as the MOVEM.W 
  (memory to register) destroys the upper 16 bits of the registers :-( There
  was perhaps no real bug, but at least now there's no risk that someone
  not aware of this creates a bug by re-using a routine with MOVEM.W (LVL)
- Makefile: (hack) target '256' now builds a UNIQUE EmuTOS (LVL)
- bios/mfp.c: ACIA interrupts no longer enabled by mfp_init() (LVL)
- bios/bios.c: clarified order of ACIA initialization (LVL)
- bios/aciavecs.S: fixed bug with status packets; implemented ikbdstate and
  documented in some detail (the Compendium was wrong); also documented known
  remaining differences between EmuTOS and the original TOS (LVL)
- bios/tosvars.[Sh]: ACIA stuff updated in sync with aciavecs.S (LVL)
- bios/vectors.S, bios/*.c: glue functions protect_xxx() used to safely call 
  external user-supplied routines (hooks, vectors, ...) even if those alter
  registers D2/A2. Done for: bell_hook, kcl_hook, hdv_rw, hdv_mediach, 
  hdv_bpb, bcoxxx[]. In fact I was surprised to see that some vectors are 
  never called (hdv_init, hdv_boot, etv_term, etv_critic). Is it a bug? (LVL)
- bios/ikbd.c, bios/sound.[ch]: keyclick() reportedly gets scancode as 
  argument in register d0 (LVL)
- bios/vt52.c: bell() called depending of bit 3 of conterm (LVL)
