@@ -419,10 +419,17 @@ void w_barcalc(WORD isvert, WORD space, WORD sl_value, WORD sl_size,
           sl_size = max(min_sld, mul_div(sl_size, space, 1000) );
 
         sl_value = mul_div(space - sl_size, sl_value, 1000);
+#if 0 /* anemic slidebars */
         if (isvert)
           r_set(ptv, 3, sl_value, gl_wbox-6, sl_size);
         else
           r_set(pth, sl_value, 2, sl_size, gl_hbox-4);
+#else
+        if (isvert)
+          r_set(ptv, 0, sl_value, gl_wbox, sl_size);
+        else
+          r_set(pth, sl_value, 0, sl_size, gl_hbox);
+#endif
 }
 
 
